Refactor file structure

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -19,6 +19,6 @@
   </head>
   <body>
     <button id="changeColor">Turn On</button>
-    <script src="../js/popup.js"></script>
+    <script src="./popup.js"></script>
   </body>
 </html>
