--- a/src/options/options.html
+++ b/src/options/options.html
@@ -14,5 +14,5 @@
     <div id="buttonDiv">
     </div>
   </body>
-  <script src="../js/options.js"></script>
+  <script src="./options.js"></script>
 </html>
