--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,21 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      body {
-        margin: 0;
-      }
-      button {
-        margin: 0;
-        font-size: 14px;
-        padding: 25px;
-        width: 100%;
-        border: none;
-        outline: none;
-        background-color: #333;
-        color: white;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="popup.css">
   </head>
   <body>
     <button id="changeColor">Turn On</button>
